Exploring Project Reactor - Map operator

--- a/stock-trading/src/main/resources/application.properties
+++ b/stock-trading/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.application.name=Stock Trading
 #Web properties
 #HTTP server port
 server.port=7070
+
+#Data properties
+spring.mongodb.embedded.version=3.5.5
